# vidhi7

backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 18a2bf91cd80_add_role_column_to_users.py
backend/src/: app.py
backend/src/core/: clerk.py  config.py  database.py  llm.py  ocr.py  pinecone.py  redis.py
backend/src/lib/: mistral_ocr.py
backend/src/models/: db_tables.py  query.py  user.py
backend/src/routes/: main_context.py  query.py  session.py  user.py
backend/src/utils/: api_response.py  document_handler.py  exception_handler.py  pdf_utils.py
frontend/: .prettierrc  drizzle.config.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/actions/: lawyer.action.ts  user.action.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx
frontend/components/atoms/: brand-logo.tsx
frontend/components/features/: markdown-render.tsx  upload-files.tsx
frontend/components/form-fields/: form-checkbox.tsx  form-input.tsx  index.ts  (+2 more)
frontend/contexts/: app-provider.tsx  index.tsx  react-query-provider.tsx
frontend/db/: config.ts  schema.ts
frontend/drizzle/: 0000_clear_unicorn.sql  0001_bumpy_the_liberteens.sql  0002_minor_molly_hayes.sql  0003_absurd_stature.sql  0004_loud_maximus.sql  0005_reflective_unicorn.sql
frontend/lib/: constant.ts  fetch-sse.ts  format-string.ts
frontend/types/: api-response.ts  chat.ts  index.ts  lawyer.ts  query-sse.ts  user.ts
(+29 files in other folders)
